metapubws/kube/services/metapubws-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: metapubws
  name: metapubws
spec:
  type: LoadBalancer
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: metapubws
# status:
#   loadBalancer: {}
